--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 html {
   block-size: 100%;
 }
+
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -16,6 +17,7 @@ html {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+
 .page { 
   display: flex;
   align-items: center;
@@ -47,6 +49,7 @@ ul,
 ol {
   list-style: none;
 }
+
 .content {
   display: flex;
   block-size: fit-content;
@@ -54,9 +57,9 @@ ol {
   margin: 133px 30px;
   gap: 30px;
 }
+
 .search-form {
   width: 711px;
-  min-height: 54px;
   flex: none;
   order: 1;
   flex-grow: 0;
@@ -64,37 +67,42 @@ ol {
   grid-template-columns: 1fr 1fr min-content;
   align-items: flex-start;
 }
+
 .content__list {
   position: relative;
-  bottom: 0;
-  left: 0;
   height: 298px;
   width: max-content;
   overflow-y: auto;
 }
+
 .content__details {
   display: grid;
   grid-template-rows: 1fr min-content;
   inline-size: 399px;
   gap: 26px;
 }
+
 .result__video-container {
-    position: relative;
-    width: 711px;
-    height: 386px;
+  position: relative;
+  width: 711px;
+  height: 386px;
 }
+
 .result__video-container video {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .content__list-item:not(:last-child) {
   margin-bottom: 30px;
 }
+
 .content__list-item {
   display: flex;
   align-items: flex-start;
 }
+
 .content__video-card {
   display: grid;
   grid-template-columns: 1fr min-content;
@@ -102,20 +110,24 @@ ol {
   width: 394px;
   height: fit-content;
 }
+
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
   object-fit: cover;
+  object-position: center;
 }
+
 .content__video-card-description-container {
   width: 200px;
 }
+
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: transparent;
-  border: 1px solid #FFF;
+  border: 1px solid currentColor;
   cursor: pointer;
   color: #FFF;
   text-align: center;
@@ -125,20 +137,18 @@ ol {
   font-weight: 700;
   line-height: normal;
 }
+
 .search-form {
   display: grid;
   grid-template-columns: 1fr 1fr min-content;
   align-items: flex-start;
-  min-height: 54px;
   width: 711px;
   gap: 40px;
 }
 
-
 .search-form__label {
   display: inline-flex;
   align-items: center;
-  height: 22px;
   width: fit-content;
   gap: 5px;
 }
@@ -227,7 +237,6 @@ input[type="text"]::placeholder {
 
 .title {
   width: fit-content;
-
   color: #FFF;
   font-family: Oswald, 'Arial', sans-serif;
   font-size: 75px;
@@ -239,30 +248,6 @@ input[type="text"]::placeholder {
 
 .content__accent {
   color: #545050;
-  font-family: Oswald, 'Arial', sans-serif;
-  font-size: 75px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 94%;
-  text-transform: uppercase;
-}
-
-.content__list {
-  position: relative;
-  bottom: 0;
-  left: 0;
-  height: 298px;
-  width: max-content;
-  overflow-y: auto;
-}
-
-.content__list-item {
-  display: flex;
-  align-items: flex-start;
-}
-
-.content__list-item:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .more-button {
@@ -280,18 +265,6 @@ input[type="text"]::placeholder {
   background-color: #545050;
 }
 
-.content__video-card {
-  display: grid;
-  grid-template-columns: 1fr min-content;
-  align-items: flex-start;
-  width: 394px;
-  height: fit-content;
-}
-
-.content__video-card-description-container {
-  width: 200px;
-}
-
 .content__video-card-title {
   margin-bottom: 6px;
   color: #FFF;
@@ -301,6 +274,10 @@ input[type="text"]::placeholder {
   font-weight: 700;
   line-height: 100%; /* 30px */
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 260px;
 }
 
 .content__video-card-description {
@@ -381,3 +358,4 @@ button:hover {
   text-decoration: underline;
   text-decoration-color: #FFF;
 }
+
